# dwh

./: README.md  cabal.project
code/: file0.dwh  file1.dwh
core-dwh/: CHANGELOG.md  core-dwh.cabal
frontend/: .gitignore  dune-project  example.dwh  frontend.opam
frontend-dwh/: .gitignore  CHANGELOG.md  LICENSE  frontend-dwh.cabal
frontend-dwh/src/: Eval.hs  Graph.hs  Lexer.hs  Main.hs  Parser.hs  Semantic.hs  Syntax.hs
frontend-dwh/test/: Main.hs
frontend/src/: ast_types.ml  ast_types.mli  compile_program_ir.ml  compile_program_ir.mli  dune  lexer.mll  main.ml  parsed_ast.ml  parsed_ast.mli  parser.mly  pprint_past.ml
frontend/src/ast/: dune
frontend/src/parsing/: dune  lex_and_parser.ml  lex_and_parser.mli  lexer.mll  parsed_ast.ml  parsed_ast.mli  parser.mly  pprint_past.ml
frontend/src/typing/: dune  typed_ast.ml  typed_ast.mli
