cabal-version:      3.0
name:               frontend-dwh
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             karchx
maintainer:         kenethra.74@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Lexer
                    , Syntax
                    , Eval
                    , Main
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20.2.0
        ,text >=2.1.3
        ,megaparsec >=9.7
        ,parser-combinators >=1.3
        ,containers
        ,mtl
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite frontend-dwh-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
         base ^>=4.20.2.0
        ,frontend-dwh
