(lang dune 3.21)

(name frontend)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name frontend)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml core_unix)
 (tags
  ("add topics" "to describe" your project)))

(using menhir 2.0)
; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
